--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.IChat">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".SetProfile" />
+        <activity android:name=".OtpSignUp" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
