--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.IChat">
-        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".SpecificChat"></activity>
+        <activity android:name=".UpdateProfile" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".ChatActivity" />
         <activity android:name=".SetProfile" />
         <activity android:name=".OtpSignUp" />
         <activity android:name=".MainActivity" />
